# retromark-mcp-server

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
data/: README.md
docs/: amazonq-setup.md  claude-setup.md  client-comparison.md  continue-setup.md  troubleshooting.md
openspec/: project.md
openspec/archive/add-universal-mcp-client-support/: deployment.md  design.md  proposal.md  tasks.md
openspec/archive/add-universal-mcp-client-support/specs/mcp-server/: spec.md
openspec/specs/bookmark-management/: spec.md
openspec/specs/chrome-integration/: spec.md
openspec/specs/cli-mode/: spec.md
openspec/specs/mcp-server/: spec.md
openspec/specs/web-content-extraction/: spec.md
src/: server.py  url_manager.py
src/utils/: browser_integration.py
