[project]
name = "retromark-mcp-server"
version = "0.1.0"
description = "A tool for managing, categorizing, and searching web URLs with both CLI and AI-assisted interfaces"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.115.12",
    "fastmcp>=2.5.1",
    "mcp>=1.9.1",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []

[project.scripts]
retromark-server = "src.server:app.run"
retromark-cli = "src.url_manager:main"
