[project]
name = "retromark-mcp-server"
version = "0.2.0"
description = "Universal MCP server for AI-assisted bookmark management. Works with Claude Desktop, Claude Code, Continue.dev, Amazon Q CLI, and other MCP clients."
readme = "README.md"
requires-python = ">=3.10,<3.14"
keywords = ["mcp", "claude", "continue", "bookmark-manager", "ai-assistant", "ide", "vscode", "mcp-server"]
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.115.12",
    "fastmcp>=2.5.1",
    "mcp>=1.9.1",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []

[project.scripts]
retromark-server = "src.server:app.run"
retromark-cli = "src.url_manager:main"
